SERVER-26715 Set default values for WireSpec min/max values